; ModuleID = '/home/carl/AnghaBench/i3/src/extr_config_parser.c_get_resource.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_config_parser.c_get_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conn = common dso_local global i32* null, align 8
@database = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [39 x i8] c"Failed to open the resource database.\0A\00", align 1
@.str.1 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @get_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_resource(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i32*, i32** @conn, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %25

8:                                                ; preds = %1
  %9 = load i32*, i32** @database, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %8
  %12 = load i32*, i32** @conn, align 8
  %13 = call i32* @xcb_xrm_database_from_default(i32* %12)
  store i32* %13, i32** @database, align 8
  %14 = load i32*, i32** @database, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %11
  %17 = call i32 @ELOG(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %18 = call i32* @xcb_xrm_database_from_string(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.1, i64 0, i64 0))
  store i32* %18, i32** @database, align 8
  store i8* null, i8** %2, align 8
  br label %25

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19, %8
  %21 = load i32*, i32** @database, align 8
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @xcb_xrm_resource_get_string(i32* %21, i8* %22, i32* null, i8** %4)
  %24 = load i8*, i8** %4, align 8
  store i8* %24, i8** %2, align 8
  br label %25

25:                                               ; preds = %20, %16, %7
  %26 = load i8*, i8** %2, align 8
  ret i8* %26
}

declare dso_local i32* @xcb_xrm_database_from_default(i32*) #1

declare dso_local i32 @ELOG(i8*) #1

declare dso_local i32* @xcb_xrm_database_from_string(i8*) #1

declare dso_local i32 @xcb_xrm_resource_get_string(i32*, i8*, i32*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
